--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -10,27 +10,37 @@
 
     <body>
     <th:block th:include="header::header"></th:block>
-    <div class="container">
+
+    <div class="container" style="margin-top: 20px;">
+        <div class="row">
+            <div class="col-md-4 offset-md-4">
+                <form th:action="@{/login}" th:object="${studentDTO}" method="post">
+                    <div class="form-group">
+                        <label for="Name">Name</label>
+                        <input type="text" class="form-control" id="Name"
+                               name="login" th:field="*{name}" placeholder="Enter name">
+                        <div class="error" th:if="${#fields.hasErrors('Name')}" th:errors="*{Name}"></div>
+                        <div class="form-group">
+                            <label for="lastName">Last Name</label>
+                            <input type="text" th:field="*{lastName}" class="form-control" id="lastName"
+                                   name="login" placeholder="Enter last name">
+                        </div>
+                        <div class="form-group">
+                            <label for="login">Login</label>
+                            <input type="text" th:field="*{login}" class="form-control" id="login"
+                                   name="login" placeholder="Enter login">
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input type="password" th:field="*{password}" class="form-control" id="password" name="password"
+                                   placeholder="Enter password">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+            </form>
+        </div>
     </div>
-    <form th:action="@{/registration}" th:object="${studentDTO}" method="post">
-        <div>
-            <label for="name">name</label>
-            <input id="name" type="text" th:field="*{name}">
-        </div>
-        <div>
-            <label for="lastName">lastName</label>
-            <input id="lastName" type="text" th:field="*{lastName}">
-        </div>
-        <div>
-            <label for="login">login</label>
-            <input id="login" type="text" th:field="*{login}">
-        </div>
-        <div>
-            <label for="password">password</label>
-            <input id="password" type="password" th:field="*{password}">
-        </div>
-        <button type="submit">Submit</button>
-    </form>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"></script>
