--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -13,6 +13,8 @@
     </head>
     <body>
     <th:block th:include="header::header"></th:block>
+    <th:block th:if="${questions.size() == 5}">
+
     <form th:action="@{/quiz/game}" th:object="${quizAnswerDTO}" method="post">
         <fieldset>
             <legend th:text="${questions[0].text}"></legend>
@@ -154,6 +156,14 @@
         <button th:type="submit">Submit</button>
         <button th:type="reset">Reset</button>
     </form>
+    </th:block>
+    <th:block th:if="${questions.size() < 5}">
+        <h2>Nie ma więcej pytań na tym poziomie. Zacznij od nowa albo zmień poziom.</h2>
+        <form th:action="@{/quiz/newgame}" method="post">
+            <button th:type="submit">Zacznij od nowa</button>
+        </form>
+
+    </th:block>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
