--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -14,7 +14,7 @@
     <div class="container" style="margin-top: 20px;">
         <div class="row">
             <div class="col-md-4 offset-md-4">
-                <form th:action="@{/login}" th:object="${studentDTO}" method="post">
+                <form th:action="@{/registration}" th:object="${studentDTO}" method="post">
                     <div class="form-group">
                         <label for="Name">Name</label>
                         <input type="text" class="form-control" id="Name"
