--- a/src/main/resources/templates/quiz.html
+++ b/src/main/resources/templates/quiz.html
@@ -13,6 +13,11 @@
     </head>
     <body>
     <th:block th:include="header::header"></th:block>
+    <div>
+        Wybierz poziom zaawansowania.
+        Poziom początkujący – 1 punkt
+    </div>
+
     <th:block th:each="level : ${levels}">
         <div>
             <a th:text="${level}" th:href="@{/quiz/game(level=${level})}"></a>
