question add repaired

--- a/src/main/resources/templates/addquestion.html
+++ b/src/main/resources/templates/addquestion.html
@@ -20,37 +20,37 @@
                     </div>
                     <div class="form-group">
                         <label for="questionText">Question text</label>
-                        <input type="text" th:field="*{name}" class="form-control" id="questionText"
+                        <input type="text" th:field="*{text}" class="form-control" id="questionText"
                                name="login" placeholder="Enter question text">
                     </div>
                     <div class="form-group">
                         <label for="level">Level</label>
-                        <input type="number" th:field="*{name}" class="form-control" id="level"
+                        <input type="number" th:field="*{level}" class="form-control" id="level"
                                name="login" placeholder="Enter level">
                     </div>
                     <div class="form-group">
                         <label for="answer1">Answer1</label>
-                        <input type="text" th:field="*{name}" class="form-control" id="answer1"
+                        <input type="text" th:field="*{answer1}" class="form-control" id="answer1"
                                name="login" placeholder="Enter Answer1">
                     </div>
                     <div class="form-group">
                         <label for="answer2">Answer2</label>
-                        <input type="text" th:field="*{name}" class="form-control" id="answer2"
+                        <input type="text" th:field="*{answer2}" class="form-control" id="answer2"
                                name="login" placeholder="Enter Answer2">
                     </div>
                     <div class="form-group">
                         <label for="answer3">Answer3</label>
-                        <input type="text" th:field="*{name}" class="form-control" id="answer3"
+                        <input type="text" th:field="*{answer3}" class="form-control" id="answer3"
                                name="login" placeholder="Enter Answer3">
                     </div>
                     <div class="form-group">
                         <label for="answer4">Answer4</label>
-                        <input type="text" th:field="*{name}" class="form-control" id="answer4"
+                        <input type="text" th:field="*{answer4}" class="form-control" id="answer4"
                                name="login" placeholder="Enter Answer4">
                     </div>
                     <div class="form-group">
                         <label for="correctAnswer">Correct Answer</label>
-                        <input type="text" th:field="*{name}" class="form-control" id="correctAnswer"
+                        <input type="text" th:field="*{correctAnswer}" class="form-control" id="correctAnswer"
                                name="login" placeholder="Enter correct answer">
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
