--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
                         <input type="password" class="form-control" id="password" name="password"
                                placeholder="Enter password">
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary">Log in</button>
                 </form>
             </div>
         </div>
