--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -35,7 +35,7 @@
                             <input type="password" th:field="*{password}" class="form-control" id="password" name="password"
                                    placeholder="Enter password">
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Register</button>
                     </div>
             </form>
         </div>
