role add with registration

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -83,7 +83,7 @@
             <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" th:text="${username}"
+                        <a class="nav-link enabled" href="/username" th:text="${username}"
                                               style="color: #ffedff"></a>
                     </li>
 <!--                    <li class="nav-item dropdown">-->
