--- a/src/main/resources/templates/quiz.html
+++ b/src/main/resources/templates/quiz.html
@@ -13,18 +13,20 @@
     </head>
     <body>
     <th:block th:include="header::header"></th:block>
+    <div class="container">
     <div>
         Wybierz poziom zaawansowania:
     </div>
     <div>
-        Poziom początkujący – 1 punkt || Poziom średniozaawansowany – 2 punkty || Poziom zaawansowany – 3 punkty
+        <p>Poziom początkujący – 1 punkt || Poziom średniozaawansowany – 2 punkty || Poziom zaawansowany – 3 punkty</p>
     </div>
-    <div> </div>
+
     <th:block th:each="level : ${levels}">
-        <div>
-            <a th:text="${level}" th:href="@{/quiz/game(level=${level})}"></a>
+        <div style="margin-top: 10px">
+            <a class="btn btn-primary btn-lg btn-block"  th:text="${level}" th:href="@{/quiz/game(level=${level})}"></a>
         </div>
     </th:block>
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -35,5 +37,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
+    </div>
     </body>
 </html>
