--- a/src/main/resources/templates/correctquiz.html
+++ b/src/main/resources/templates/correctquiz.html
@@ -14,6 +14,7 @@
 
 <body>
 <th:block th:include="header::header"></th:block>
+<div class="container" style="margin-top: 10px">
 <h3>GRATULACJE!!!</h3>
 <h2>Twój wynik to: <span th:text="${quizScore}"/></h2>
 <h2>Twój aktualny poziom to: <span th:text="${level}"/></h2>
@@ -30,11 +31,11 @@
 <div>
     <b>Idż dalej. Wybierz kolejne pytanie według poziomu:</b>
 </div>
-<th:block th:each="level : ${levels}">
-    <div>
-        <a th:text="${level}" th:href="@{/quiz/game(level=${level})}"></a>
-    </div>
-</th:block>
+    <th:block th:each="level : ${levels}">
+        <div style="margin-top: 10px">
+            <a class="btn btn-primary btn-lg btn-block"  th:text="${level}" th:href="@{/quiz/game(level=${level})}"></a>
+        </div>
+    </th:block>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -45,5 +46,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
