--- a/src/main/resources/templates/quiz.html
+++ b/src/main/resources/templates/quiz.html
@@ -13,7 +13,7 @@
     </head>
     <body>
     <th:block th:include="header::header"></th:block>
-    <div class="container">
+    <div class="container" style="margin-top: 10px">
     <div>
         Wybierz poziom zaawansowania:
     </div>
