--- a/src/main/resources/templates/quiz.html
+++ b/src/main/resources/templates/quiz.html
@@ -15,10 +15,10 @@
     <th:block th:include="header::header"></th:block>
     <div class="container" style="margin-top: 10px">
     <div>
-        Wybierz poziom zaawansowania:
-    </div>
-    <div>
+        <p>Zasady: quiz składa się z 60 pytań, po 20 na każdy z trzech poziomów zaawansowania:</p>
         <p>Poziom początkujący – 1 punkt || Poziom średniozaawansowany – 2 punkty || Poziom zaawansowany – 3 punkty</p>
+        <p>Co 10 punktów użytkownikowi zwiększany jest poziom.</p>
+        <p>Na pytanie można odpowiedzieć tylko raz.</p>
     </div>
 
     <th:block th:each="level : ${levels}">
