--- a/src/main/resources/templates/username.html
+++ b/src/main/resources/templates/username.html
@@ -16,12 +16,13 @@
 </head>
 <body>
 <th:block th:include="header::header"></th:block>
-
-<div class="container">
-    <h1><span th:text="${name}"/> <span th:text="${lastName}"/> </h1>
-    <h2>Twój aktualny poziom to: <span th:text="${level}"/></h2>
-    <h2>Ilość punktów pozostała do zwiekszenia Twojego poziomu: <span th:text="${progressLeft}"/></h2>
-
+<div class="container" style="margin-top: 10px">
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4"><span th:text="${name}"/> <span th:text="${lastName}"/></h1>
+        <h2 class="lead">Twój aktualny poziom to: <span th:text="${level}"/></h2>
+        <h2 class="lead">Ilość punktów pozostała do zwiekszenia Twojego poziomu: <span th:text="${progressLeft}"/></h2>
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -33,6 +34,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-
+</div>
 </body>
 </html>
