--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -17,43 +17,13 @@
         <th:block th:include="header::header"></th:block>
         <div>
             <div class="container">
-                <div style="border-style: double; padding: 10px;margin-right: 30px;
-    margin-left: 1px; margin-top: 20px;">
-                    1) <b>Horstmann C.S., Java. Podstawy, Wydanie X i nowsze, Helion, Gliwice 2016, 872 s.</b> – biblia
-                    javowców. Wydanie X jest zgodne z Javą 8. Choć książka zawiera niektóre rzadko używane technologie,
-                    jak pakiet Swing i jest dosyć trudna w odbiorze dla początkujących – zawiera jednak dogłębną analizę
-                    podstaw składni Javy iobiektowości. Jest to pierwszy tom serii tego autora, drugi – Techniki
-                    zaawansowane – omawia takie zagadnienia, jak API strumieni, aplikacje sieciowe używające protokołu
-                    HTTP, JDBC i kwestie bezpieczeństwa.
-                    </p>
-                    <a target=”_blank”
-                       href="https://helion.pl/ksiazki/java-podstawy-wydanie-x-cay-s-horstmann,javp10.htm#format/d"
-                       class="text-decoration-none">Kup najnowszą wersję książki na stronie wydawcy</a>
-                </div>
-                <div>
-                    <div style="border-style: double; padding: 10px;margin-right: 30px;
-    margin-left: 1px;  margin-top: 20px;">
-                        2) <b>Schildt H., Java. Przewodnik dla początkujących, Wydanie VI i nowsze, Helion,Gliwice 2015,
-                        568 s. </b> – typowy podręcznik z listingami kodu do przepisania i uruchomienia. Styl bardziej
-                        zrozumiały niż u Horstmanna. Z rzeczy, których już siędziś mało używa mamy rozdziały o apletach,
-                        Swingu i JavieFX. Publikacja sygnowana przez firmę Oracle, aktualnego wydawcę Javy.
-                        </p>
-                        <a target=”_blank”
-                           href="https://helion.pl/ksiazki/java-przewodnik-dla-poczatkujacych-wydanie-vi-herbert-schildt,javpp6.htm#format/d"
-                           class="text-decoration-none">Kup najnowszą wersję książki na stronie wydawcy</a>
+                <th:block th:each="book : ${books}">
+                    <div style="border-style: double; padding: 10px;margin-right: 30px; margin-left: 1px; margin-top: 20px;">
+                        <b th:text="${book.title}"></b>
+                        <p th:text="${book.characterization}"></p>
+
                     </div>
-                    <div style="border-style: double; padding: 10px;margin-right: 30px;
-    margin-left: 1px;  margin-top: 20px;">
-                        3) <b>Schildt H., Java. Kompendium programisty, Wydanie IX i nowsze, Helion, Gliwice2015, 1132
-                        s.</b> – bardziej rozbudowana, dogłębna, encyklopedyczna i dwa razy dłuższa wersja poprzedniej
-                        książki tego autora. W części I omówiony został język Java, w części II biblioteki języka Java
-                        (część III i IV pomijamy milczeniem – Swing i JavaFX), a w części V stosowanie Javy w praktyce
-                        (Java Beans, serwety).
-                        </p>
-                        <a target=”_blank”
-                           href="https://helion.pl/ksiazki/java-kompendium-programisty-wydanie-ix-herbert-schildt,javkp9.htm#format/d"
-                           class="text-decoration-none">Kup najnowszą wersję książki na stronie wydawcy</a>
-                    </div>
+                </th:block>
                 </div>
             </div>
 
