--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -14,10 +14,17 @@
 
     <body>
     <th:block th:include="header::header"></th:block>
+    <div class="container" style="margin-top: 10px" >
+        <div class="row">
+            <div class="col-md-4 offset-md-4">
     <th:block th:each="student : ${students}">
-        <p th:text="${student.name}"/>
-        <p th:text="${student.lastName}"/>
-        <p th:text="${student.level}"/>
+    <ul class="list-group">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+            <p th:text="${student.name}"/>
+            <p th:text="${student.lastName}"/>
+            <p th:text="${student.level}"/>
+        </li>
+    </ul>
     </th:block>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -28,5 +35,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
+            </div>
+        </div>
+    </div>
     </body>
 </html>
