--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -13,24 +13,25 @@
     </head>
     <body>
     <th:block th:include="header::header"></th:block>
+    <div class="container" style="margin-top: 10px">
+        <th:block th:each="question : ${questions}">
+            <p th:text="${question.name}"/>
+            <p th:text="${question.text}"/>
+            <p th:text="${question.answer1}"/>
+            <p th:text="${question.answer2}"/>
+            <p th:text="${question.answer3}"/>
+            <p th:text="${question.answer4}"/>
+        </th:block>
 
-    <th:block th:each="question : ${questions}">
-        <p th:text="${question.name}"/>
-        <p th:text="${question.text}"/>
-        <p th:text="${question.answer1}"/>
-        <p th:text="${question.answer2}"/>
-        <p th:text="${question.answer3}"/>
-        <p th:text="${question.answer4}"/>
-    </th:block>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                crossorigin="anonymous"></script>
+    </div>
     </body>
 </html>
